--- a/Documents/Salesforce/VoucherManagement/sfdx-project.json
+++ b/Documents/Salesforce/VoucherManagement/sfdx-project.json
@@ -4,8 +4,8 @@
             "path": "force-app",
             "default": true,
             "package": "voucherManagement",
-            "versionName": "ver 1.1",
-            "versionNumber": "1.2.0.NEXT"
+            "versionName": "ver 1.2",
+            "versionNumber": "1.2.1.NEXT"
         }
     ],
     "namespace": "",
@@ -16,6 +16,7 @@
         "voucherManagement@0.5.0-1": "04t10000000eZcFAAU",
         "voucherManagement@1.1.0-1": "04t10000000eZcKAAU",
         "voucherManagement@1.1.0-2": "04t10000000eZcPAAU",
-        "voucherManagement@1.2.0-1": "04t10000000eZcUAAU"
+        "voucherManagement@1.2.0-1": "04t10000000eZcUAAU",
+        "voucherManagement@1.2.1-1": "04t10000000eZceAAE"
     }
 }
