--- a/Documents/Salesforce/VoucherManagement/config/project-scratch-def.json
+++ b/Documents/Salesforce/VoucherManagement/config/project-scratch-def.json
@@ -1,11 +1,13 @@
 {
-  "orgName": "Demo Company",
+  "orgName": "bunai-crm scratch org",
   "edition": "Developer",
   "features": [],
   "settings": {
-    "orgPreferenceSettings": {
-      "s1DesktopEnabled": true,
-      "s1EncryptedStoragePref2": false
+    "lightningExperienceSettings": {
+        "enableS1DesktopEnabled": true
+    },
+    "mobileSettings": {
+        "enableS1EncryptedStoragePref2": false
     }
   }
 }
