--- a/Documents/Salesforce/VoucherManagement/sfdx-project.json
+++ b/Documents/Salesforce/VoucherManagement/sfdx-project.json
@@ -17,6 +17,7 @@
         "voucherManagement@1.1.0-1": "04t10000000eZcKAAU",
         "voucherManagement@1.1.0-2": "04t10000000eZcPAAU",
         "voucherManagement@1.2.0-1": "04t10000000eZcUAAU",
-        "voucherManagement@1.2.1-1": "04t10000000eZceAAE"
+        "voucherManagement@1.2.1-1": "04t10000000eZceAAE",
+        "voucherManagement@1.3.1-1": "04t10000000eZdXAAU"
     }
 }
